data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_539.wast
;; 10. **Test Non-Matching Result Types in Loop Exit Conditions**:     Validate if differing result types in an attempted loop exit through `br_if` or `br` can cause the loop to incorrectly stay in execution and become infinite.  Each differential test should expose different implementations handling the control flow, type management, and stack operations differently, which can result in erroneous infinite loops if not implemented correctly.

(assert_invalid
  (module
    (func $loop-mismatching-results
      (loop (result i32)
        (br_if 0 (i64.const 1))
        (i32.const 1)
      )
      drop
    )
  )
  "type mismatch"
)